success turn on gpu

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
   </head>
   <body>
     <h1>Hello, Electron!</h1>
+		<video loop autoplay muted src="https://elfiny.top/test.mp4"></video>
   </body>
 </html>
